# HFT-DataAggregator

./: Cargo.toml  README.md
.github/workflows/: ci-cd.yml
src/: main.rs
src/api/: fix_handler.rs  handlers.rs  mod.rs  routes.rs  websocket_handler.rs
src/connectors/: fix_connector.rs  mod.rs  rest_connector.rs  websocket_connector.rs
src/connectors/fix_connector/: connection.rs  error_handling.rs  message.rs  models.rs  sequence.rs  session.rs
src/connectors/rest_connector/: client.rs  models.rs  order_book_api.rs  stock_api.rs  time_series_api.rs
src/dispatch/: data_dispatcher.rs  mod.rs
src/monitoring/: mod.rs  monitoring.rs
src/processing/: data_buffer.rs  data_processing.rs  mod.rs
src/storage/: database.rs
src/tests/: unit_tests.rs
