[package]
name = "StockAggregator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.39.2", features = ["full"]}
reqwest = {version = "0.11.27", features = ["json" , "blocking"]}
tokio-tungstenite = "0.15"
futures = "0.3"
log = "0.4"
slog = "2.7"
serde = {version = "1.0.207", features = ["derive"]}
serde_json = "1.0.125"
chrono = "0.4"
sqlx = { version = "0.8.0", features = ["runtime-tokio-native-tls", "postgres"] }
env_logger = "0.11.5"
dotenv = "0.15.0"